--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
 
 body {
    font-family: 'Yekan'; 
-   background: rgb(144,38,234);
-   background: linear-gradient(90deg, rgba(144,38,234,1) 0%, rgba(88,33,247,1) 100%);
+   background: #21b62d;
+   background: linear-gradient(90deg, #1479d6 0%, #3021b6 100%);
    height: 100vh;
    direction: rtl;
 }
